# flv-repeater

./: .gitignore  CMakeLists.txt  README.md  build.sh
res/: SampleVideo_720x480_1mb.flv  head1.flv  modc.flv  modd.flv  out.flv  repeat1.flv
src/: file_utils.c  flv-repeater.c  flv-repeater.h  main.c
